Fix homepage on mobile

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,34 +1,27 @@
-img {
+/* img {
     width: 100%;
     height: 800px;
     margin: 0px 0px 40px 0px;
-}
+} */
 
 .main-image {
-    max-width: 100%;
-    height: 800px;
-    overflow: hidden;
+    width: 100%;
+    /* max-width: 100%; */
+    /* overflow: hidden; */
+}
+
+.main-image-mobile {
+    display: none;
 }
 
 div {
     text-align: center;
 }
 
-.main-slogan {
-    color: white;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-weight: 900;
-    font-size: 300%;
-    z-index: 10;
-}
-
 .sub-slogan {
     color: white;
     position: absolute;
-    top: 30%;
+    top: 250px;
     left: 50%;
     transform: translate(-50%, -50%);
     font-weight: 900;
@@ -36,11 +29,22 @@ div {
     z-index: 10;
 }
 
+.main-slogan {
+    color: white;
+    position: absolute;
+    top: 330px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: 900;
+    font-size: 300%;
+    z-index: 10;
+}
+
 .read-more {
     position: absolute;
     background: #6ec1e4;
     color: #ffffff;
-    top: 65%;
+    top: 550px;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 5px 20px 5px 20px;
@@ -54,16 +58,91 @@ div {
     text-decoration: none;
 }
 
-.learn-more {
-    background: #3f51b5;
-    color: #ffffff;
-    padding: 5px 20px 5px 20px;
-    border-radius: 15px;
-    font-family: Arial, Helvetica;
-    font-size: x-large;
-    display: block;
-    margin-left:auto;
-    margin-right:auto;
+@media all and (max-width: 1300px){
+    .sub-slogan {
+        color: white;
+        position: absolute;
+        top: 20vw;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-weight: 900;
+        font-size: calc(10px + 1.5vw);
+        z-index: 10;
+    }
+
+    .main-slogan {
+        color: white;
+        position: absolute;
+        top: 25vw;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-weight: 900;
+        font-size: calc(20px + 1vw);
+        z-index: 10;
+    }
+
+    .read-more {
+        position: absolute;
+        background: #6ec1e4;
+        color: #ffffff;
+        top: 40vw;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 5px 20px 5px 20px;
+        border-radius: 15px;
+        font-size: calc(8px + 1vw);
+        z-index: 10;
+    }
+}
+
+@media all and (max-width: 700px) {
+    .main-image {
+        display: none;
+    }
+    
+    .main-image-mobile {
+        display: block;
+        width: 100%;
+    }
+
+    .sub-slogan {
+        color: white;
+        position: absolute;
+        top: 35vw;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-weight: 900;
+        font-size: 4vw;
+        z-index: 10;
+    }
+
+    .main-slogan {
+        color: white;
+        position: absolute;
+        top: 50vw;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-weight: 900;
+        font-size: 4vw;
+        z-index: 10;
+    }
+
+    .read-more {
+        position: absolute;
+        background: #6ec1e4;
+        color: #ffffff;
+        top: 90vw;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 5px 20px 5px 20px;
+        border-radius: 15px;
+        font-size: calc(10px + 3vw);
+        z-index: 10;
+    }
+
+    .sub-nav-mobile {
+        text-align: left;
+    }
 }
 
 .second-block {
@@ -127,7 +206,7 @@ div {
 
 .sub-nav {
     position: absolute;
-    top: 10%;
+    top: 70px;
     left: 50%;
     transform: translate(-50%);
     white-space: nowrap;
@@ -137,23 +216,20 @@ div {
 }
 
 .sub-nav-mobile {
-    margin: 10px 40px 40px 10px;
-    text-align: left;
     padding: 20px;
     z-index: 999;
     border: 0px;
 }
 
-.sub-nav-mobile mat-card {
+/* .sub-nav-mobile mat-card {
     background-color: #3f51b5;
     color: white;
-}
+} */
 
 .sub-nav-mobile p {
     margin-left: 30px;
+    display: inline-block;
 }
-
-
 
 .sub-nav p {
     color: white;
